[FE]fix:Add situation in meme-upload axios & Edit align-items css in meme-new-list

--- a/Frontend/src/components/meme/list/MemeListNew.module.css
+++ b/Frontend/src/components/meme/list/MemeListNew.module.css
@@ -8,6 +8,5 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
   gap: 1rem;
 }
